--- a/config/content.htm
+++ b/config/content.htm
@@ -15,8 +15,10 @@
 <p><br/><br/><br/></p>
 <p></p>
 <h1>Tasks</h1>
-<div>
-<h2>task1</h2>
+<div></div>
+<!-- 假如檔案小於 5mb, 將 mp4 檔案放入 downloads 目錄後取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="123" height="630" muted="true" width="1008">
+<source src="./../downloads/123.mp4" type="video/mp4"/></video></div><h2>task1</h2>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/6vyk42mrW40?si=n9cxZrL6yvCDGL_W" title="YouTube video player" width="560"></iframe></p>
 <h3>list</h3>
 <p>程式碼</p>
@@ -358,7 +360,9 @@ for i in range(1, 67):  # 1 到 66
 <div id="brython_div1"></div>
 <h2>task3</h2>
 <h2>task4</h2>
-<h3>w5</h3>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/IOlSm8MbzlU" title="webots 建立連桿1" width="959"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/KHVOa19gJv8" title="webots 建立連桿2" width="958"></iframe> <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/BEmwhtHUmjY" title="webots 建立連桿3" width="954"></iframe></p>
+<p></p><h3>w5</h3>
 <p>Webots連接練習示範影片</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/73vdtErA2tI?si=VN-eGWVLXphHcNH_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></p>
 <h2>task5</h2>
@@ -400,7 +404,7 @@ for i in range(1, 67):  # 1 到 66
 <p>HW2 (5%): <span style="background-color: #ffff00;">建立由 CAD 繪製零件組成的平面四連桿機構 Webots 模擬場景</span></p>
 <p>操作影片標題: 國立虎尾科技大學 - 機械設計工程系 - cd2025 HW2 - 學員學號</p>
 <p></p>
-<h2>HW3</h2>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/cODJQDip9is" title="國立虎尾科技大學 - 機械設計工程系 - cd2025 HW2 - 41071203" width="885"></iframe></p><h2>HW3</h2>
 <p>HW3 (20%):<span style="background-color: #ffff00;">建立 Webots 桌上籃球遊戲機模擬系統</span></p>
 <p>操作影片標題: 國立虎尾科技大學 - 機械設計工程系 - cd2025 HW3 - 學員學號</p>
 <p></p>
@@ -692,4 +696,3 @@ doc["aitetris"].bind("click", aitetris.do)
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
 </p>
-</div>
