--- a/content/Brython.html
+++ b/content/Brython.html
@@ -385,7 +385,7 @@ doc["aitetris"].bind("click", aitetris.do)
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
 </p>
-</div><br />Final << <a href='Final.html'>Previous</a> </div>
+<br />Final << <a href='Final.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
